--- a/.github/workflows/build-archiveteam.yml
+++ b/.github/workflows/build-archiveteam.yml
@@ -14,8 +14,9 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: pinoykrissmith/containers
-  TAG: archiveteam
+  IMAGE_NAME: pinoykrissmith/archiveteam
+  TAG: latest
+  CONTEXT: Archiveteam
 
 jobs:
   build:
@@ -33,6 +34,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Set date tag for weekly images
+        if: ${{ github.event_name == 'schedule' }}
+        run: |
+          echo "DATE_TAG=$(date +'%Y%m%d%H')" >> $GITHUB_ENV
+
       - name: Login to registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -48,12 +54,13 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             ${{ env.TAG }}
+            ${{ env.DATE_TAG }}
 
       - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@v6
         with:
-          context: ./Archiveteam
+          context: ${{ env.CONTEXT }}
           platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
