--- a/.github/workflows/build-traccar.yml
+++ b/.github/workflows/build-traccar.yml
@@ -17,7 +17,7 @@ env:
   IMAGE_NAME: pinoykrissmith/traccar
   TAG: latest
   CONTEXT: Traccar
-  VERSIONED: false
+  VERSIONED: true
 
 jobs:
   build:
