--- a/Caddy/Caddyfile
+++ b/Caddy/Caddyfile
@@ -154,7 +154,11 @@ nitter.{$MY_DOMAIN} {
 		header Content-Security-Policy "default-src 'none'; script-src 'self' 'unsafe-inline'; img-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self'; object-src 'none'; media-src 'self' blob:; worker-src 'self' blob:; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; connect-src 'self' https://*.twimg.com; manifest-src 'self'"
 	}
 	route @lan {
-		reverse_proxy nitter-gluetun:8080
+		reverse_proxy nitter-gluetun:8080 {
+			transport http {
+			compression off
+			}
+		}
 	}
 }
 
