--- a/.github/workflows/build-traccar.yml
+++ b/.github/workflows/build-traccar.yml
@@ -21,7 +21,7 @@ env:
 
 jobs:
   build:
-    name: Building new image for ${{ matrix.platforms }}
+    name: Building new image for ${{ matrix.arch }}
     permissions:
       contents: read
       packages: write
