--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -1,13 +1,14 @@
-FROM docker.io/opensuse/tumbleweed:latest
+FROM docker.io/library/fedora:latest
 ARG UID=200011
 ENV PYTHONUNBUFFERED=1
 ENV GRADIO_SHARE="False"
 ENV GRADIO_ANALYTICS_ENABLED="False"
 ENV GRADIO_SERVER_NAME=0.0.0.0
 ENV GRADIO_SERVER_PORT=8080
-RUN zypper -n update --no-recommends \
-	&& zypper -n install --no-recommends calibre ffmpeg git unzip python310 \
-	&& rm -rf /var/cache/zypp/*
+RUN dnf upgrade --refresh -y --setopt=install_weak_deps=False \
+	&& dnf install --skip-broken -y --setopt=install_weak_deps=False calibre ffmpeg unzip git python3.10 which \
+	&& dnf remove sudo -y --setopt protected_packages= \
+	&& dnf clean all
 
 WORKDIR /app
 ADD https://github.com/DrewThomasson/ebook2audiobookpiper-tts.git#main .
@@ -19,7 +20,7 @@ RUN python3.10 -m ensurepip --upgrade && pip3.10 install --no-cache-dir --upgrad
 	&& pip3.10 install --no-cache-dir --prefer-binary spacy==3.7.5 piper-tts pydub nltk beautifulsoup4 ebooklib tqdm gradio \
 	&& python3.10 -m spacy download en_core_web_sm \
 	&& unzip -q "/tmp/nltk.zip" -d "/tmp" \
-	&& rm -rf "/usr/local/lib/python3.10/site-packages/nltk" \
+	&& rm -rf "/usr/local/lib/python3.10/site-packages/nltk" "/tmp/nltk.zip" \
 	&& mv "/tmp/nltk" "/usr/local/lib/python3.10/site-packages/nltk"
 
 USER piper
