Updated OpenZFS docker container

--- a/OpenZFS/Dockerfile
+++ b/OpenZFS/Dockerfile
@@ -1,15 +1,15 @@
 FROM registry.fedoraproject.org/fedora:41
 ARG VERSION=2.3.0
-RUN dnf upgrade --refresh -y --setopt=installonly_limit=0 \
+RUN sed -i -e s,countme=1,countme=0, /etc/yum.repos.d/*.repo \
 	&& dnf install --skip-broken gcc make autoconf automake libtool rpm-build libtirpc-devel libblkid-devel \
 	libuuid-devel libudev-devel openssl-devel zlib-devel libaio-devel libattr-devel elfutils-libelf-devel python3 \
 	python3-devel python3-setuptools python3-cffi libffi-devel git ncompress libcurl-devel \
-	dnf-plugins-core dkms python3-packaging -y --setopt=installonly_limit=0 \
+	dnf-plugins-core dkms python3-packaging -y \
 	&& dnf copr enable @asahi/kernel -y \
-	&& dnf install kernel-16k-devel -y --setopt=installonly_limit=0
+	&& dnf install kernel-16k-devel -y
 
 WORKDIR /tmp/zfs
-RUN git clone --depth=1 https://github.com/openzfs/zfs.git#zfs-$VERSION .
+RUN git clone --depth=1 https://github.com/openzfs/zfs.git -b zfs-${VERSION} .
 COPY signers /tmp/signers
 RUN --network=none gpg --import /tmp/signers \
 	&& git verify-tag $(git describe --tags) \
