Updated Headwind's Dockerfile

--- a/Headwind/Dockerfile
+++ b/Headwind/Dockerfile
@@ -26,7 +26,7 @@ RUN mkdir -p /usr/local/tomcat/conf/Catalina/localhost \
 RUN chown --recursive ${UID}:${UID} /usr/local/tomcat/ \
 	&& chown --recursive ${UID}:${UID} /opt/ \
 	&& addgroup --gid ${UID} hmdm \
-	&& adduser --ingroup hmdm --uid ${UID} --disabled-password --no-create-home --system hmdm
+	&& adduser --ingroup hmdm --uid ${UID} --disabled-password --no-create-home --shell /usr/sbin/nologin --system hmdm
 
 COPY --from=docker.io/headwindmdm/hmdm:latest /docker-entrypoint.sh /docker-entrypoint.sh
 COPY --from=docker.io/headwindmdm/hmdm:latest --chown=${UID}:${UID} /opt/hmdm/ /opt/hmdm/
