--- a/Attestation/Dockerfile
+++ b/Attestation/Dockerfile
@@ -28,39 +28,37 @@ FROM docker.io/library/alpine:latest
 ARG UID=200003
 ENV JAVA_HOME=/opt/java/openjdk
 ENV PATH "${JAVA_HOME}/bin:${PATH}"
-RUN addgroup -g $UID -S nginx || true \
-	&& adduser -S -D -H -u $UID -h /var/cache/nginx -s /sbin/nologin -G nginx -g nginx nginx || true \
-	&& apk -U --no-cache upgrade \
-	&& apk add --no-cache nginx nginx-mod-http-brotli brotli sqlite tzdata \
-	&& rm -rf /var/cache/apk/*
+RUN --network=none addgroup -g $UID -S nginx || true && adduser -S -D -H -u $UID -h /var/cache/nginx -s /sbin/nologin -G nginx -g nginx nginx || true
+RUN apk -U --no-cache upgrade \
+	&& apk add --no-cache nginx nginx-mod-http-brotli brotli sqlite tzdata
 
-RUN mkdir /var/cache/nginx \
+RUN --network=none mkdir /var/cache/nginx \
 	&& chown -R $UID:0 /var/cache/nginx && chmod -R g+w /var/cache/nginx \
 	&& chown -R $UID:0 /etc/nginx && chmod -R g+w /etc/nginx \
 	&& mkdir /app && chown -R $UID:0 /app && chmod -R g+w /app
 
-RUN ln -sf /dev/stdout /var/log/nginx/access.log && ln -sf /dev/stderr /var/log/nginx/error.log \
+RUN --network=none ln -sf /dev/stdout /var/log/nginx/access.log && ln -sf /dev/stderr /var/log/nginx/error.log \
 	&& ln -s /usr/lib/nginx/modules/ngx_http_brotli_filter_module.so /etc/nginx/modules/ngx_http_brotli_filter_module.so \
 	&& ln -s /usr/lib/nginx/modules/ngx_http_brotli_static_module.so /etc/nginx/modules/ngx_http_brotli_static_module.so \
 	&& mkdir /docker-entrypoint.d
 
-COPY --chown=nginx:nginx --from=0 /app/nginx-tmp/mime.types /etc/nginx/
-COPY --chown=nginx:nginx --from=0 /app/nginx-tmp/root_attestation.app.conf /etc/nginx/
-COPY --chown=nginx:nginx --from=0 /app/nginx-tmp/snippets /etc/nginx/snippets
-COPY --chown=nginx:nginx --from=0 /app/static-tmp /srv/attestation.app_a
-COPY --chown=nginx:nginx ./nginx.conf /etc/nginx/nginx.conf
+COPY --chown=${UID}:${UID} --from=0 /app/nginx-tmp/mime.types /etc/nginx/
+COPY --chown=${UID}:${UID} --from=0 /app/nginx-tmp/root_attestation.app.conf /etc/nginx/
+COPY --chown=${UID}:${UID} --from=0 /app/nginx-tmp/snippets /etc/nginx/snippets
+COPY --chown=${UID}:${UID} --from=0 /app/static-tmp /srv/attestation.app_a
+COPY --chown=${UID}:${UID} ./nginx.conf /etc/nginx/nginx.conf
 COPY --from=docker.io/nginxinc/nginx-unprivileged:stable-alpine-slim /etc/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=docker.io/nginxinc/nginx-unprivileged:stable-alpine-slim /docker-entrypoint.d /docker-entrypoint.d
 COPY --from=docker.io/nginxinc/nginx-unprivileged:stable-alpine-slim /docker-entrypoint.sh /docker-entrypoint.sh
-COPY --chown=nginx:nginx --from=0 /app/build/libs/ /app
-COPY --chown=nginx:nginx --from=0 /app/libs/sqlite4java-prebuilt/ /usr/lib
+COPY --chown=${UID}:${UID} --from=0 /app/build/libs/ /app
+COPY --chown=${UID}:${UID} --from=0 /app/libs/sqlite4java-prebuilt/ /usr/lib
 COPY --from=0 /javaruntime $JAVA_HOME
-RUN printf '#!/bin/sh\n/opt/java/openjdk/bin/java -jar /app/attestation-server.jar &' > /docker-entrypoint.d/99-attestation.sh \
+RUN --network=none printf '#!/bin/sh\n/opt/java/openjdk/bin/java -jar /app/attestation-server.jar &' > /docker-entrypoint.d/99-attestation.sh \
 	&& chmod +x /docker-entrypoint.d/99-attestation.sh
 
 EXPOSE 8080
 STOPSIGNAL SIGQUIT
-USER $UID
+USER ${UID}
 WORKDIR /data
 ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["nginx", "-g", "daemon off;"]
