--- a/Immich/Dockerfile
+++ b/Immich/Dockerfile
@@ -7,10 +7,12 @@ RUN apt-get update && apt-get install -y curl
 RUN curl -Lo /vectors.deb https://github.com/tensorchord/pgvecto.rs/releases/download/v${VERSION}/vectors-pg${POSTGRES}_${VERSION}_$(dpkg --print-architecture).deb
 
 FROM docker.io/library/postgres:${POSTGRES}
+ARG UID=200012
 COPY --from=0 /vectors.deb /tmp/vectors.deb
-RUN apt-get update && apt-get upgrade -y && apt-get dist-upgrade -y
-RUN apt-get install -y /tmp/vectors.deb && rm -f /tmp/vectors.deb && rm -rf /var/cache/apt/* && rm -f /usr/local/bin/gosu
-RUN usermod -u 26 postgres
+RUN apt-get update && apt-get upgrade -y && apt-get dist-upgrade -y \
+	&& apt-get install -y /tmp/vectors.deb && rm -f /tmp/vectors.deb && rm -rf /var/cache/apt/* && rm -f /usr/local/bin/gosu
+RUN --network=none usermod -u ${UID} postgres && groupmod -g ${UID} postgres \
+	&& find / -user 999 -exec chown -h postgres {} \; && find / -group 999 -exec chgrp -h postgres {} \;
 
-USER 26
+USER ${UID}
 CMD ["postgres", "-c", "shared_preload_libraries=vectors.so", "-c", "search_path=\"$user\", public, vectors", "-c", "logging_collector=on", "-c", "max_wal_size=2GB", "-c", "shared_buffers=512MB", "-c", "wal_compression=on"]
