--- a/Archiveteam/Dockerfile
+++ b/Archiveteam/Dockerfile
@@ -8,5 +8,5 @@ RUN apt-get update \
 RUN --network=none usermod -u ${UID} warrior && groupmod -g ${UID} warrior \
 	&& find / -path /proc -prune -o -user 1000 -exec chown warrior {} + && find / -path /proc -prune -o -group 1000 -exec chgrp warrior {} +
 ADD --chmod=755 https://github.com/secureblue/secureblue/raw/681a8c1a8fa77f401be5d117babbda44fdd142ad/files/scripts/removesuid.sh /tmp/
-RUN /tmp/removesuid.sh || true && rm /tmp/removesuid.sh
+RUN --network=none /tmp/removesuid.sh || true && rm /tmp/removesuid.sh
 USER ${UID}
