--- a/F-Droid/Dockerfile
+++ b/F-Droid/Dockerfile
@@ -20,5 +20,5 @@ RUN --network=none printf '#!/bin/sh\njava -jar /usr/lib/android-sdk/build-tools
 RUN --network=none usermod -u ${UID} nginx && groupmod -g ${UID} nginx \
 	&& find / -path /proc -prune -o -user 101 -exec chown nginx {} + && find / -path /proc -prune -o -group 101 -exec chgrp nginx {} +
 ADD --chmod=755 https://github.com/secureblue/secureblue/raw/681a8c1a8fa77f401be5d117babbda44fdd142ad/files/scripts/removesuid.sh /tmp/
-RUN /tmp/removesuid.sh || true && rm /tmp/removesuid.sh
+RUN --network=none /tmp/removesuid.sh || true && rm /tmp/removesuid.sh
 USER ${UID}
