Updated linkwarden dockerfile

--- a/.github/workflows/build-linkwarden.yml
+++ b/.github/workflows/build-linkwarden.yml
@@ -8,6 +8,7 @@ on:
     paths:
       - '.github/workflows/build-linkwarden.yml'
       - 'Linkwarden/Dockerfile'
+      - 'Linkwarden/init.js'
   schedule:
     # Build the image weekly
     - cron: '15 0 * * 5'
