--- a/Headwind/.env.example
+++ b/Headwind/.env.example
@@ -1,7 +1,5 @@
 # To start Headwind MDM with docker-compose, copy this file to .env and update the variables
 # This is the start with the most common options:
-# HTTPS + Certbot/LetsEncrypt + PostgreSQL with the single database
-HTTPS_LETSENCRYPT=false
 SQL_BASE=hmdm
 SQL_USER=hmdm
 SQL_PASS=
@@ -17,9 +15,4 @@ BASE_DOMAIN=
 
 # Turn on this parameter once you change variables!
 # After a successful start, turn this parameter back off
-FORCE_RECONFIGURE=true
-
-HMDM_VARIANT=os
-DOWNLOAD_CREDENTIALS=
-HMDM_URL=https://h-mdm.com/files/hmdm-5.30.3-os.war
-CLIENT_VERSION=5.30
+FORCE_RECONFIGURE=false
