Updated Dockerfile for Nitter

--- a/Nitter/Dockerfile
+++ b/Nitter/Dockerfile
@@ -19,6 +19,6 @@ USER ${UID}
 COPY --from=0 /src/nitter /app/nitter
 COPY --from=0 /src/public /app/public
 COPY --from=0 /src/tools/get_session.py /app/get_session.py
-COPY ./nitter.conf.example /app/nitter.conf
+COPY --chmod=644 ./nitter.conf.example /app/nitter.conf
 EXPOSE 8080
 CMD ["/app/nitter"]
